# Gomonku

./: .gitignore  BoardState.py  GoRules.py  Gomoku.py  Gomonku.py  Minimax.py  PyGameGo.py  PygameGo.py  State.py  benchmark.py  config.json  global_var.py  go_rules.py  gomoku.py  player.py  py_game_go.py  pygame_go.py  requirements.txt  rust_clean_lib.sh  rust_compilation.sh  rust_compilation_release.sh  test_call_to_rust.py  utils.py
bash_script/: rust_clean_lib.sh  rust_compilation.sh  rust_compilation_release.sh
gomoku_rust_lib/: Cargo.toml  Makefile.toml
gomoku_rust_lib/src/: algorithms.rs  bit_operations.rs  bitboard.rs  bitboard_operations.rs  bitboards.rs  bitpattern.rs  board_pattern_state.rs  check.rs  check_bits.rs  check_move.rs  data_struct.rs  global_var.rs  heuristic.rs  heuristic_ratios.rs  lib.rs  negamax.rs  patterns.rs  print.rs  pytests.rs  search_space.rs  state.rs  tata.rs  test_algorithm_benchmark.rs  test_check_free_development.rs  test_check_is_unblockable_five.rs  test_pattern_axes_finder.rs  test_pattern_blocker.rs  test_print.rs  tests.rs  transpotable.rs  utils.rs
gomoku_rust_lib/src/algorithms/: algo_utils.rs  bns.rs  minimax.rs  mod.rs  mtdf.rs  negamax.rs  negascout.rs  transpotable.rs
gomoku_rust_lib/src/tests/: mod.rs  test_algorithm_benchmark.rs  test_check_ai_move.rs  test_check_is_capturable.rs  test_check_is_unblockable_five.rs  test_check_potential_winning_alignment.rs  test_is_on_axe.rs  test_pattern_axes_finder.rs  test_pattern_blocker.rs
gomonku_python/: README.md
gomonku_rust/: Cargo.toml
python_GUI/: global_var.py  (+4 more)
(+9 files in other folders)
