[package]
name = "gomokulib"
version = "0.1.0"
authors = ["slumfy <valentin.robert.bransat@gmail.com>"]
edition = "2018"

[lib]
name = "gomokulib"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [dependencies]
