[package]
name = "gomoku_rust"
version = "0.1.0"
edition = "2018"

[lib]
name = "gomoku_rust"
# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use string_sum;` unless the "rlib" or "lib" crate type is also included, e.g.:
# crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib"]

[dependencies]
stoppable_thread = "0.2.1"
colour = "0.6.0"

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]
